[package]
name = "ws_game"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.8", features = ["macros"]}
tokio = { version = "1.41.1", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4", "with-uuid-1"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }